--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,20 @@
 {
-  "name": "VELARE HUB",
+  "name": "VELARE ECOSYSTEM",
   "short_name": "VELARE",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#fdf6f0",
   "theme_color": "#ff9aa2",
-  "icons": [{ "src": "Logo.png", "sizes": "512x512", "type": "image/png" }]
+  "icons": [
+    {
+      "src": "Logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "Logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
